--- a/biostatistics.html
+++ b/biostatistics.html
@@ -105,7 +105,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdventGlobalSolutions1/743999697405092-biostatistician'>Advent Global Solutions Biostatistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdventGlobalSolutions1/743999697405092-biostatistician'>Advent Global Solutions Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -171,7 +171,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -205,7 +205,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
+<h5><a href='https://chroniclevitae.com/jobs/0000504302-01'>
 	Chair and Full Professor - Department of Epidemiology/Biostatistics | ChronicleVitae
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -241,7 +241,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Maine, United States</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -249,7 +249,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -277,7 +277,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -295,7 +295,7 @@ files, writing application programs within a statistical software, analyzing dat
 midline and endline quantitative data collection points. The primary outcomes of
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ergomed/743999691394798-biostatistician'>Ergomed Biostatistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Germany</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -315,7 +315,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vergegenomics/c142c4e5-4644-4be1-8729-9294f3b4c62e'>Verge Genomics - Lead Biostatistician</a></h5> 
+<h5><a href='https://jobs.lever.co/vergegenomics/c142c4e5-4644-4be1-8729-9294f3b4c62e'>Verge Genomics - Lead Biostatistician</a></h5> 
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -331,7 +331,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -496,7 +496,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatistician-ii-32744'>Biostatistician II - Baylor Scott & White Health Careers</a></h5> 
+<h5><a href='https://bswhealth.referrals.selectminds.com/jobs/biostatistician-ii-32744'>Biostatistician II - Baylor Scott & White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-31</p>
 <hr/>
